<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="500dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@color/lightWhite">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_cardview"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/popup_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_song_img" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_marginLeft="90dp"
        android:id="@+id/popup_close_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="10dp"
        app:tint="@color/black"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/popup_song_name"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/defaultSongName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_cardview"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/authors_title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/popup_authors_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_song_name" />

    <TextView
        android:id="@+id/popup_authors_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_default_authors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authors_title"
        style="@style/subtitle"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/musics_title"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/popup_tracks_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_authors_content" />

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musics_title"
        android:id="@+id/popup_musics_recycler" />

    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/play_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_musics_recycler" />

    <ImageView
        android:id="@+id/playlist_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_playlist_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toBottomOf="@+id/popup_musics_recycler" />
</androidx.constraintlayout.widget.ConstraintLayout>