<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_playing_title"
        style="@style/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/playing"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/playing_station_info"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:backgroundTint="@color/beige"
        app:cardCornerRadius="7dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_playing_title"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            app:cardCornerRadius="7dp"
            app:cardElevation="8dp">

            <ImageView
                android:id="@+id/playing_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/default_song_img" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>
    <!-- Autres éléments de la cardview -->
    <View
        android:id="@+id/view_image"
        android:layout_width="1dp"
        android:layout_height="80dp"
        android:layout_marginLeft="120dp"
        app:layout_constraintStart_toStartOf="@+id/playing_station_info"
        app:layout_constraintTop_toTopOf="@+id/playing_station_info" />

    <TextView
        android:id="@+id/playing_song_title"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="9dp"
        android:text="@string/defaultSongName"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/playing_station_info"
        app:layout_constraintStart_toEndOf="@+id/view_image"
        app:layout_constraintTop_toTopOf="@+id/playing_station_info"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="40dp"/>

    <ImageView
        android:id="@+id/playing_play_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginRight="80dp"
        android:elevation="9dp"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="@+id/playing_station_info"
        app:layout_constraintStart_toStartOf="@+id/playing_song_title"
        app:tint="@color/black"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/playing_remove_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="9dp"
        android:src="@drawable/ic_skip"
        android:layout_marginLeft="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/playing_play_icon"
        app:layout_constraintEnd_toEndOf="@+id/playing_station_info"
        app:layout_constraintStart_toStartOf="@+id/playing_station_info"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/playing_playlist_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="9dp"
        android:src="@drawable/ic_playlist_add"
        app:layout_constraintBottom_toBottomOf="@+id/playing_remove_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playing_remove_icon"
        app:tint="@color/black"
        android:layout_marginRight="20dp"/>
    <!-- Partie recycling -->

    <TextView
        android:id="@+id/textView2"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/recently"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/fragment_playing_title"
        app:layout_constraintTop_toBottomOf="@+id/playing_station_info" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
</androidx.constraintlayout.widget.ConstraintLayout>